--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         --accent-hover: #572b37;
         --padding: 12px;
         --width: 12px;
-        --background: rgb(7,45,60);
+        --background: #072d3c;
         --z-top: 1000;
 
       }
@@ -88,10 +88,11 @@
         color: white;
       }
       h2 {
-        color: #add3da;
+        color: white;
+        font-weight: bold;
       }
       h3 {
-        color: #62848a;
+        color: silver;
       }
         
       p {
